fixed landing issue. Navbar is still too wide

--- a/src/assets/scss/landing/_content.scss
+++ b/src/assets/scss/landing/_content.scss
@@ -157,7 +157,7 @@ body {
 // SECTION-6
 .contact-us {
   .contact-us-bgimage {
-    background-image: url('../img/landing/gdpr.jpg');
+    background-image: url('src/assets/img/landing/gdpr.jpg');
     background-position:center;
     background-repeat:no-repeat;
     background-size:cover;
